apps/platform/harbor-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: harbor
  namespace: harbor
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`harbor.atlas.laucoin.fr`)
      services:
        - name: harbor
          port: 80
  tls:
    secretName: harbor-tls
