apps/platform/sonarqube-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: sonarqube
  namespace: sonarqube
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarqube.atlas.laucoin.fr`)
      services:
        - name: sonarqube-sonarqube
          port: 9000
  tls:
    secretName: sonarqube-tls
